# Wisecube_SDK

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
src/: create_response.py  wisecube_sdk.py
src/wisecube_sdk/: clint.py  create_response.py  wisecube_sdk.py
src/wisecube_sdk_skeleton_alexander2000/: api_calls.py  hosting.py  operations.py  string_query.py  wisecube_sdk.py
tests/: test.py
